<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Keep Focus</string>
    <string name="action_settings">Settings</string>
    <string name="button_default">Default</string>
    <string name="button_create">Create</string>
    <string name="button_delete">Delete all</string>
    <string name="popup_setting">Settings</string>
    <string name="popup_about">About</string>
    <string name="popup_setting_edit">Edit profile name</string>
    <string name="popup_setting_delete">Delete profile</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="edit_name">Edit name</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="day_title">Days</string>
    <string name="btn_monday">Mon</string>
    <string name="btn_tuesday">Tue</string>
    <string name="btn_wednesday">Wed</string>
    <string name="btn_thursday">Thu</string>
    <string name="btn_friday">Fri</string>
    <string name="btn_saturday">Sat</string>
    <string name="btn_sunday">Sun</string>

    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>

    <!--  Days title -->
    <string name="title_day">Days</string>
    <!--  Time title -->
    <string name="title_time">Times</string>
    <string name="add_button">ADD</string>
    
    <string name="item_block_title">What items are blocked</string>
    <string name="item_block_app_title">Launch app</string>
    <string name="item_block_notification_title">Notification app</string>
    <string name="selected_app_title">Selected app</string>
    
    <string name="title_necessary_system_settings">System settings</string>
    <string name="set_notification_access">Set notification access</string>
    <string name="set_notification_access_hint">Notification access must be enable for S Keep Focus in order to block notification.</string>
    <string name="set_application_access">Set application access</string>
    <string name="set_application_access_hint">Application usage access must be enable for S Keep Focus in order to block application.</string>
    <string name="PIN_code">PIN code</string>
    <string name="enable_PIN_code">Enable PIN code</string>
    <string name="set_PIN_code">Set PIN code</string>
    <string name="pin_code">Create a 4 digit PIN code</string>

    <string name="edit_name_popup_msg">Edit your profile name</string>
    <string name="create_profile_popup_msg">Create your new schedule that you want to keep focus</string>
    <string name="delete_profile_popup_msg">Do you want to delete this profile ?</string>
    <string name="color_lock_title">Setup Password</string>
    <string name="password_color_lock_title">PIN CODE</string>
    <string name="choose_color_lock_title">INPUT PIN CODE</string>
    <string name="confirm_color_lock_title">CONFIRM PIN CODE</string>
    <string name="text_guide_1">Please input 4 values to pin code.</string>
    <string name="text_guide_2">Please confirm your pin code.</string>
    <string name="text_guide_3">Try again.</string>
    <string name="confirm_pin_code">Please input your pin code!</string>
    <string name="input_new_pin_code">Input your new pin code.</string>
    <string name="access_pin_code">Input pin code to access application.</string>
    <string name="delete_pincode">Remove pin code</string>
    <string name="delete_pincode_msg">Please input old pin code to remove it.</string>

    <string name="button_color_lock_reset">RESET</string>
    <string name="button_color_lock_undo">UNDO</string>
    <string name="button_color_lock_continue">CONTINUE</string>
    <string name="button_color_lock_confirm">CONFIRM</string>
    <string name="description_color_lock"></string>
    
    <string name="title_usage_access">Application access</string>
    <string name="popup_usage_access">You must enable application usage access for S Keep Focus in order to block application</string>
    <string name="title_notification_access">Notifications access</string>
    <string name="popup_notification_access">You must enable notification access for S Keep Focus in order to block notifications</string>
    <string name="popup_notification_access_not_support">This feature requires android OS version 4.3 or later, please upgrade your OS version</string>
    
    <!--  List missing notification history -->
     <string name="notificaion_icon">Notification Icon</string>
     <string name="notify_missing_notification">Hey ! You are missing %1$s Notifications</string>
     <string name="notify_missing_notification_content">Tap here to show all missing Notifications</string>
     <string name="missing_notification_title">All of missing Notifications</string>
     <string name="clear">Clear</string>
     <string name="block_app_description">app was blocked !!!</string>
     <string name="close_button">Home</string>
     <string name="about_s_keep_focus">About S Keep focus</string>
     <string name="about_s_keep_focus_description">S Keep Focus is an application that can help you focus on your work, your schedule.\n\nSet your applications that installed into your device to block any apps which make you neglect. You can also set dates and times to block these applications.</string>
</resources>
