<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical"
    tools:context="com.samsung.test.LockActivity" >

    <LinearLayout
        android:id="@+id/layoutPassColorLock_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_lock_color"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/color_Show_Pass"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >
            <com.accessibility.keepfocus.settings.CustomImageView 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_margin="2dp"
                 android:id="@+id/pass_1"/>
            <com.accessibility.keepfocus.settings.CustomImageView 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_margin="2dp"
                 android:id="@+id/pass_2"/>
            <com.accessibility.keepfocus.settings.CustomImageView 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_margin="2dp"
                 android:id="@+id/pass_3"/>
            <com.accessibility.keepfocus.settings.CustomImageView 
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_margin="2dp"
                 android:id="@+id/pass_4"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#C0C0C0" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPassColorLock_2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@null"
        android:clipChildren="false"
        android:orientation="vertical"
        android:splitMotionEvents="false" >

        <TextView
            android:id="@+id/help_choose_Color_Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_text_title_setting"
            android:textSize="@dimen/title_text_size" />
       <LinearLayout
            android:id="@+id/layoutColorChoose1_ColorLock"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:background="@null"
            android:clipChildren="false"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:weightSum="3" >
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n1"/>
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n2"/>
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circle_button_white"
                android:text="@string/n3"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutColorChoose2_ColorLock"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@null"
            android:clipChildren="false"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:weightSum="3" >
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n4"/>
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n5" />
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
               android:text="@string/n6" />
            <!-- android:background="#0000FF" -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutColorChoose3_ColorLock"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@null"
            android:clipChildren="false"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:weightSum="3" >
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
               android:text="@string/n7"/>
            <!-- android:background="#4B0082" -->
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n8" />
            <!-- android:background="#8D38C9" -->
            <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n9" />
            <!-- android:background="#000000" -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutColorChoose4_ColorLock"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@null"
            android:clipChildren="false"
            android:orientation="horizontal"
            android:splitMotionEvents="false"
            android:weightSum="3" >
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></LinearLayout>
             <com.accessibility.keepfocus.settings.CustomButton
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/circle_button_white"
                android:text="@string/n0" />
             <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></LinearLayout>
            </LinearLayout>  
    </LinearLayout>

</LinearLayout>